--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: bundle exec rails s -b 0.0.0.0
     depends_on:
       - database
       - redis
